--- a/styles/style.css
+++ b/styles/style.css
@@ -2,16 +2,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@500&display=swap');
 
 /* utilities or common styles*/
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
-    background-color: #F3F1FF;
+    height: 1250px;
+    width: 1440px;
+    margin: auto;
 }
 
 main {
+    background-color: #F3F1FF;
     display: flex;
     flex-direction: column;
-
     align-items: center;
+    padding-bottom: 28px;
 }
 
 .container {
@@ -27,6 +35,48 @@ hr {
     margin-bottom: 10px;
 
 }
+
+/*-------------- menu bar styles--------- */
+
+
+.Idea-section {
+    display: flex;
+    justify-content: space-around;
+    background-color: #562EFF;
+    height: 94px;
+
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+}
+
+.logo img {
+    width: 40.42px;
+    height: 51px;
+}
+
+.logo-name {
+    font-weight: 500;
+    font-size: 24px;
+    color: #FFFFFF;
+    padding-left: 15px;
+}
+
+.menu-bar {
+    display: flex;
+    align-items: center;
+}
+
+.menu-bar a {
+    font-size: 16px;
+    text-decoration: none;
+    color: #FFFFFF;
+    padding-right: 36px;
+}
+
+
 
 /*------------- top players style------------ */
 
@@ -183,9 +233,33 @@ hr {
 
 /*---- Mobile Devices ---- */
 @media only screen and (max-width:688px) {
+    body {
+        width: 100%;
+    }
+
+    .Idea-section {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    .logo-name {
+        font-size: 16px;
+        padding: 3px;
+    }
+
+    .menu-bar a {
+        padding-right: 3px;
+    }
+
+    .menu-bar img {
+        padding-right: 5px;
+    }
+
     .container {
         width: 100%;
-        margin-left: 30px;
+        margin-left: 10px;
+        padding: 0 5px;
+        margin-right: 10px;
     }
 
     .players,
@@ -221,9 +295,21 @@ hr {
 /*----- Tablet Devices ----- */
 
 @media only screen and (min-width:689px) and (max-width:992px) {
-    .container {
+
+
+    body {
+        width: 100vw;
+        margin: 0 auto;
+    }
+
+    .Idea-section {
         width: 100%;
-        margin-left: 30px;
+    }
+
+    .container {
+        width: 90%;
+        margin: 22px 40px 0;
+        padding-right: 20px;
     }
 
     .players {
